# multiplatform-dj-software

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: BrickwallLimiter.cpp  BrickwallLimiter.h  CoverArtExtractor.cpp  CoverArtExtractor.h  CoverArtProvider.h  DeckControl.qml  DjEngine.cpp  DjEngine.h  EnlargedWaveform.qml  FxManager.cpp  FxManager.h  FxProcessor.cpp  FxProcessor.h  FxUnit.qml  Library.qml  LibraryDatabase.cpp  LibraryDatabase.h  LibraryManager.cpp  LibraryManager.h  LibraryTableModel.cpp  LibraryTableModel.h  LinkManager.cpp  LinkManager.h  MidiControllerManager.cpp  MidiControllerManager.h  MixerSection.qml  OverallWaveform.qml  ParameterStore.cpp  ParameterStore.h  PerformancePads.qml  PhraseAnalyzer.cpp  PhraseAnalyzer.h  RgbWaveformItem.cpp  RgbWaveformItem.h  ScratchEngine.cpp  ScratchEngine.h  ScrollingWaveformItem.cpp  ScrollingWaveformItem.h  SettingsManager.cpp  SettingsManager.h  (+16 more)
src/qml/: DeckControl.qml  EnlargedWaveform.qml  FxBar.qml  FxUnit.qml  Library.qml  MixerSection.qml  OverallWaveform.qml  PerformancePads.qml  SegmentBar.qml  SettingsWindow.qml  TopHeader.qml  TrackInfoDisplay.qml  TurntableIndicator.qml  main.qml
